finished first draft

--- a/hons/docs/figures/exAccuracy.tex
+++ b/hons/docs/figures/exAccuracy.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
+\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
  & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
 {\bf 3} & 1.0316 & 1.0284 & 1.0201 & 1.0059 \\ \hline
 {\bf 4} & 1.0651 & 1.1122 & - & - \\ \hline
