--- a/hons/docs/figures/exScale.tex
+++ b/hons/docs/figures/exScale.tex
@@ -1,7 +1,8 @@
-\begin{tabular}{ | c | c | c | c | c | c | c | c | }
+\begin{tabular}{ | c || c | c | c | c | c | c | c | }
 \hline
-{\bf Scale} & {\bf Range} & {\bf Av Opt} & {\bf Sg Opt} & {\bf Dp Opt} & {\bf Av Heu} & {\bf Sg Heu} & {\bf Dp Heu}
+{\bf Scale} & {\bf Range} & {\bf Av Opt} & {\bf ND Opt} & {\bf Dp Opt} & {\bf Av Heu} & {\bf ND Heu} & {\bf Dp Heu}
 \\
+\hline
 \hline
 {\bf 0} & 0.0 - 0.0 & 30.0\% & 20.0\% & 40.0\% & 30.0\% & 20.0\% & 40.0\% \\ \hline
 {\bf 1} & 2.2718 - 3.6749 & 30.0\% & 20.0\% & 40.0\% & 32.5\% & 25.0\% & 40.0\% \\ \hline
