--- a/hons/docs/figures/exFrequency.tex
+++ b/hons/docs/figures/exFrequency.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
+\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
  & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
 {\bf 3} & 8 & 8 & 8 & 6 \\ \hline
 {\bf 4} & 8 & 8 & 0 & 0 \\ \hline
