--- a/hons/docs/figures/exRampup.tex
+++ b/hons/docs/figures/exRampup.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
+\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
  & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
 {\bf 3} & 10.4015 & 28.5664 & 56.7657 & 96.2925 \\ \hline
 {\bf 4} & 14.221 & 43.6634 & - & - \\ \hline
